Display scrollbars to fix transaction list table overflow on smaller screens

--- a/pkg/web/static/styles/output.css
+++ b/pkg/web/static/styles/output.css
@@ -2552,6 +2552,18 @@ details.collapse summary::-webkit-details-marker {
   border-bottom-left-radius: 0px;
 }
 
+.table-xs :not(thead):not(tfoot) tr {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.table-xs :where(th, td) {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .tooltip {
   position: relative;
   display: inline-block;
@@ -2667,10 +2679,6 @@ details.collapse summary::-webkit-details-marker {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
-}
-
-.visible {
-  visibility: visible;
 }
 
 .collapse {
@@ -3602,6 +3610,15 @@ body main {
 
 .htmx-request.htmx-indicator{
   display: inline;
+}
+
+/* Set a media query for the transaction list table */
+
+@media (max-width: 1536px) {
+  .table-container {
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
 }
 
 @media (min-width: 768px) {
