--- a/pkg/web/static/styles/style.css
+++ b/pkg/web/static/styles/style.css
@@ -76,3 +76,11 @@ body main {
 .htmx-request.htmx-indicator{
   display: inline;
 }
+
+/* Set a media query for the transaction list table */
+@media (max-width: 1536px) {
+  .table-container {
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+}
